<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ads_dv_msgs</name>
  <version>0.0.0</version>
  <description>Package containing the messages for communicating with the ADS-DV vehicle</description>
  <maintainer email="jacob@culley.me">Jacob Culley</maintainer>
  <license>GPLv3</license>
  <url type="website">https://gitlab.com/obr-a/integration/ads_dv_msgs/</url>
  <author email="jacob@culley.me">Jacob Culley</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
